5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1752_1525.log
== TEST (2019-05-16 17:19:13) 
-- CODE:
var=int(input("volume inicial:"))
var2=int(input("volume bombeado:"))
var3=int(input("volume retirado:"))
vol=vol+100
temp=tem+1
while(vol<1000):
	vol=vol-(var2-var3)
	temp=var-(var2-var3)


	
	
	print(temp)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol=vol+100
NameError: name 'vol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:23) 
-- CODE:
var=int(input("volume inicial:"))
var2=int(input("volume bombeado:"))
var3=int(input("volume retirado:"))
vol=vol+100
temp=tem+1
while(vol<1000):
	vol=vol-(var2-var3)
	temp=var-(var2-var3)


	
	
	print(temp)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol=vol+100
NameError: name 'vol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:59) 
-- CODE:
var=int(input("volume inicial:"))
var2=int(input("volume bombeado:"))
var3=int(input("volume retirado:"))
vol=0
time=0
while(var>=1000):
	vol=vol+100
	time=time+1
	



	
	
print(time)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol=vol+100
NameError: name 'vol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:33) 
-- CODE:
var=int(input("volume inicial:"))
var2=int(input("volume bombeado:"))
var3=int(input("volume retirado:"))
vol=0
time=0
while(var>=1000):
	vol=vol+100
	time=time+1
	time=var-(var2-var3)



	
	
print(time)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol=vol+100
NameError: name 'vol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:55) 
-- CODE:
var=int(input("volume inicial:"))
var2=int(input("volume bombeado:"))
var3=int(input("volume retirado:"))
vol=0
time=0
while(var>=1000):
	vol=vol+100
	time=time+1
	time=(var)+(var2-var3)



	
	
print(time)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol=vol+100
NameError: name 'vol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:41) 
-- CODE:
var=int(input("volume inicial:"))
var2=int(input("volume bombeado:"))
var3=int(input("volume retirado:"))
vol=0
time=0
while(var>=1000):
	vol=var-vol
	time=time+1
	time=(vol)+(var2-var3)



	
	
print(time)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol=vol+100
NameError: name 'vol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:38:55) 
-- CODE:
var=int(input("volume inicial:"))
var2=int(input("volume bombeado:"))
var3=int(input("volume retirado:"))
vol=0
time=0
while(var>=1000):
	vol=var-vol
	time=time+1
	time=(vol)+(var2-var3)


	var=int(input("volume inicial:"))
	
	
print(time)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol=vol+100
NameError: name 'vol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:42) 
-- CODE:
var=int(input("volume inicial:"))
var2=int(input("volume bombeado:"))
var3=int(input("volume retirado:"))
vol=0
time=0
while(var>=1000):
	vol=var-vol
	time=time+1
	time=(vol)+(var2-var3)

	
	
print(time)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol=vol+100
NameError: name 'vol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:05) 
-- CODE:
var=int(input("volume inicial:"))
var2=int(input("volume bombeado:"))
var3=int(input("volume retirado:"))
vol=0
time=0
while(var>=1000):
	vol=var-vol
	
	time=(vol)+(var2-var3)

	
	
print(time)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol=vol+100
NameError: name 'vol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
